--- a/main.html
+++ b/main.html
@@ -4,10 +4,53 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Movie Gallery</title> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container-fluid">
+  <!-- First Row: 12 images, col-sm-1 -->
+  <div class="row">
+    <div class="col-sm-1"><img src="https://musicart.xboxlive.com/7/0dcd1800-0000-0000-0000-000000000002/504/image.jpg" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_FMjpg_UX1000_.jpg" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxRqzEpOAiNrdy8aYEgLE4auld88V3XgpCSw&s" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://m.media-amazon.com/images/M/MV5BODA4MjM2ODk4OF5BMl5BanBnXkFtZTcwNDgzODk1OQ@@._V1_FMjpg_UX1000_.jpg" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://play-lh.googleusercontent.com/eRADLEcSq_AWAeq44TbU_EOe6AvsEKWxeTaW6yGaubJ1rXAhSHlBL-5xVRXnvdN8qzc" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://musicart.xboxlive.com/7/0dcd1800-0000-0000-0000-000000000002/504/image.jpg" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_FMjpg_UX1000_.jpg" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxRqzEpOAiNrdy8aYEgLE4auld88V3XgpCSw&s" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://m.media-amazon.com/images/M/MV5BODA4MjM2ODk4OF5BMl5BanBnXkFtZTcwNDgzODk1OQ@@._V1_FMjpg_UX1000_.jpg" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://play-lh.googleusercontent.com/eRADLEcSq_AWAeq44TbU_EOe6AvsEKWxeTaW6yGaubJ1rXAhSHlBL-5xVRXnvdN8qzc" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://musicart.xboxlive.com/7/0dcd1800-0000-0000-0000-000000000002/504/image.jpg" alt="Movie"></div>
+    <div class="col-sm-1"><img src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_FMjpg_UX1000_.jpg" alt="Movie"></div>
+  </div>
+
+  <!-- Second Row: 6 images, col-sm-2 -->
+  <div class="row mt-3">
+    <div class="col-sm-2"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxRqzEpOAiNrdy8aYEgLE4auld88V3XgpCSw&s" alt="Movie"></div>
+    <div class="col-sm-2"><img src="https://m.media-amazon.com/images/M/MV5BODA4MjM2ODk4OF5BMl5BanBnXkFtZTcwNDgzODk1OQ@@._V1_FMjpg_UX1000_.jpg" alt="Movie"></div>
+    <div class="col-sm-2"><img src="https://play-lh.googleusercontent.com/eRADLEcSq_AWAeq44TbU_EOe6AvsEKWxeTaW6yGaubJ1rXAhSHlBL-5xVRXnvdN8qzc" alt="Movie"></div>
+    <div class="col-sm-2"><img src="https://musicart.xboxlive.com/7/0dcd1800-0000-0000-0000-000000000002/504/image.jpg" alt="Movie"></div>
+    <div class="col-sm-2"><img src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_FMjpg_UX1000_.jpg" alt="Movie"></div>
+    <div class="col-sm-2"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxRqzEpOAiNrdy8aYEgLE4auld88V3XgpCSw&s" alt="Movie"></div>
+  </div>
+
+  <!-- Third Row: 3 images, col-sm-4 -->
+  <div class="row mt-3">
+    <div class="col-sm-4"><img src="https://m.media-amazon.com/images/M/MV5BODA4MjM2ODk4OF5BMl5BanBnXkFtZTcwNDgzODk1OQ@@._V1_FMjpg_UX1000_.jpg" alt="Movie"></div>
+    <div class="col-sm-4"><img src="https://play-lh.googleusercontent.com/eRADLEcSq_AWAeq44TbU_EOe6AvsEKWxeTaW6yGaubJ1rXAhSHlBL-5xVRXnvdN8qzc" alt="Movie"></div>
+    <div class="col-sm-4"><img src="https://musicart.xboxlive.com/7/0dcd1800-0000-0000-0000-000000000002/504/image.jpg" alt="Movie"></div>
+  </div>
+
+  <!-- Fourth Row: 1 image, col-sm-12 -->
+  <div class="row mt-3">
+    <div class="col-sm-12"><img src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_FMjpg_UX1000_.jpg" alt="Movie"></div>
+  </div>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
